tests/rt/neg/ifc/flow1.picox
let
   val h = 42 raisedTo {secret}
   fun f () = adv 1
   fun g () = adv 2
in
   if h then spawn(f) else spawn(g) 
end
